--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@
           </div>
         </div>
         <!-- right side section -->
-        <div class="about__right-side secondary-column--side">
+        <aside class="about__right-side secondary-column--side">
             <div class="small-content u-4-side-margin--small">
                 <div class="about__small-img-container">
                   <img src="img/information-orientation.jpg" alt="information" class="about__small-img">
@@ -85,11 +85,11 @@
                   <a href="#" class="read-more">Read more</a>
                 </div>
             </div>
-        </div>
+        </aside>
       </section>
       <!-- Learning section -->
       <section class="learning">
-        <h class="heading-2 heading-2--center-1">Start learning</h>
+        <h2 class="heading-2 heading-2--center-1">Start learning</h>
         <div class="learning__container">
           <!-- Box -->
             <div class="box u-margin-bottom-big">
@@ -161,43 +161,43 @@
       </section>
       <!-- Thesis Section -->
       <section class="thesis">
-        <h class="heading-2 heading-2--center-2">Thesis exhibit</h>
-        <!-- Right side -->
-      <div class="thesis__flex-container">
-        <div class="thesis__right-side main-column">
-          <div class="thesis__video-container u-margin-bottom-medium">
-            <video class="thesis__video" controls>
-              <source src="videos/thesis.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+        <h2 class="heading-2 heading-2--center-2">Thesis exhibit</h>
+          <!-- Left side -->
+        <div class="thesis__flex-container">
+          <div class="thesis__right-side main-column">
+            <div class="thesis__video-container u-margin-bottom-medium">
+              <video class="thesis__video" controls>
+                <source src="videos/thesis.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+              </video>
+            </div>
+              <h3 class="heading-3 heading-3--video u-margin-bottom-small">Reimagine urban</h3>
+              <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
           </div>
-            <h3 class="heading-3 heading-3--video u-margin-bottom-small">Reimagine urban</h3>
-            <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+          <!-- Right side -->
+          <aside class="thesis__left-side secondary-column--side">
+            <div class="small-content u-4-side-margin--small">
+                <div class="about__small-img-container">
+                  <img src="img/thesis-fisma.jpg" alt="information" class="about__small-img">
+                </div>
+                <div class="small-content--info">
+                  <h3 class="heading-3">Fisma: Design and Prototype</h3>
+                  <p class="paragraph__small">Designer showcase of new prototype product</p>
+                  <a href="#" class="read-more">Read more</a>
+                </div>
+            </div>
+            <div class="small-content u-4-side-margin--small">
+                <div class="about__small-img-container">
+                  <img src="img/thesis-now-and-then.jpg" alt="information" class="about__small-img">
+                </div>
+                <div class="small-content--info">
+                  <h3 class="heading-3">Now and then</h3>
+                  <p class="paragraph__small">Research study about New York</p>
+                  <a href="#" class="read-more">Read more</a>
+                </div>
+            </div>
+          </aside>
         </div>
-        <!-- Left side -->
-        <div class="thesis__left-side secondary-column--side">
-          <div class="small-content u-4-side-margin--small">
-              <div class="about__small-img-container">
-                <img src="img/thesis-fisma.jpg" alt="information" class="about__small-img">
-              </div>
-              <div class="small-content--info">
-                <h3 class="heading-3">Fisma: Design and Prototype</h3>
-                <p class="paragraph__small">Designer showcase of new prototype product</p>
-                <a href="#" class="read-more">Read more</a>
-              </div>
-          </div>
-          <div class="small-content u-4-side-margin--small">
-              <div class="about__small-img-container">
-                <img src="img/thesis-now-and-then.jpg" alt="information" class="about__small-img">
-              </div>
-              <div class="small-content--info">
-                <h3 class="heading-3">Now and then</h3>
-                <p class="paragraph__small">Research study about New York</p>
-                <a href="#" class="read-more">Read more</a>
-              </div>
-          </div>
-        </div>
-      </div>
       </section>
     </main>
     <!-- Footer Section -->
