--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </section>
       <!-- Learning section -->
       <section class="learning">
-        <h2 class="heading-2 heading-2--center-1">Start learning</h>
+        <h2 class="heading-2 heading-2--center-1">Start learning</h2>
         <div class="learning__container">
           <!-- Box -->
             <div class="box u-margin-bottom-big">
@@ -161,7 +161,7 @@
       </section>
       <!-- Thesis Section -->
       <section class="thesis">
-        <h2 class="heading-2 heading-2--center-2">Thesis exhibit</h>
+        <h2 class="heading-2 heading-2--center-2">Thesis exhibit</h2>
           <!-- Left side -->
         <div class="thesis__flex-container">
           <div class="thesis__right-side main-column">
