finished responsive design

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <div class="nav__logo-container">
         <div class="nav__img-container">
           <img src="img/ic-logo.svg" alt="logo" class="nav__logo">
+          <img src="img/ic-on-campus.svg" alt="logo" class="nav__logo--phone">
+          <img src="img/ic-online.svg" alt="logo" class="nav__logo--phone">
+          <img src="img/ic-login.svg" alt="logo" class="nav__logo--phone">
         </div>
         <div class="nav__text-logo-container">
           <span class="nav__text-logo nav__text-logo--1">colmar</span>
@@ -58,6 +61,7 @@
             <div class="small-content u-4-side-margin--small">
                 <div class="about__small-img-container">
                   <img src="img/information-orientation.jpg" alt="information" class="about__small-img">
+                  <img src="img/information-orientation-mobile.jpg" alt="information" class="about__small-img--mobile">
                 </div>
                 <div class="small-content--info">
                   <h3 class="heading-3">Orientation date</h3>
@@ -68,6 +72,7 @@
             <div class="small-content u-4-side-margin--small">
                 <div class="about__small-img-container">
                   <img src="img/information-campus.jpg" alt="information" class="about__small-img">
+                  <img src="img/information-campus-mobile.jpg" alt="information" class="about__small-img--mobile">
                 </div>
                 <div class="small-content--info">
                   <h3 class="heading-3">Our campus</h3>
@@ -78,6 +83,7 @@
             <div class="small-content u-4-side-margin--small">
                 <div class="about__small-img-container">
                   <img src="img/information-guest-lecture.jpg" alt="information" class="about__small-img">
+                  <img src="img/information-guest-lecture-mobile.jpg" alt="information" class="about__small-img--mobile">
                 </div>
                 <div class="small-content--info">
                   <h3 class="heading-3">Our guest lecture</h3>
